--- a/Chatbot_Aula_4_Alura_Google.ipynb
+++ b/Chatbot_Aula_4_Alura_Google.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 12,
       "metadata": {
         "id": "qOWOdH5J-kNj"
       },
@@ -48,8 +48,10 @@
         "# Import the Python SDK\n",
         "import google.generativeai as genai\n",
         "\n",
-        "GOOGLE_API_KEY=\"AIzaSyBqwdhDpknGi3gbY2VJZBjudZFwn9ZDss8\"\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
+        "\n",
+        "genai.configure(api_key=api_key)"
       ]
     },
     {
@@ -410,7 +412,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhayA63ZJMtlu+1eol6m07",
+      "authorship_tag": "ABX9TyNBZBu4UGhO8xoFZEnNn+lM",
       "include_colab_link": true
     },
     "kernelspec": {
